--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "main": "index.js",
   "engines": {
-    "node": "10"
+    "node": "10 || 12 || 14 || 16 || 17"
   },
   "scripts": {
     "test": "jest",
